Add changes to city representative components These changes are still to the design prototype. Add component available-services-table, current-city-services, edit-profile, signup-representative and select-services.

--- a/src/app/menu/side-menu-representative/side-menu-representative.component.html
+++ b/src/app/menu/side-menu-representative/side-menu-representative.component.html
@@ -1,11 +1,11 @@
 <ul class="nav flex-column">
   <li class="nav-item">
-    <a class="nav-link active" href="#">Selecionar serviços disponíveis</a>
+    <a class="nav-link active" routerLink="select-services" routerLinkActive="active">Selecionar serviços disponíveis</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Alterar informações gerais</a>
+    <a class="nav-link" routerLink="edit-profile" routerLinkActive="active">Alterar informações gerais</a>
   </li>
-  <li class="nav-item">
+  <!--<li class="nav-item">
     <a class="nav-link" href="#">Solicitações</a>
-  </li>
+  </li>-->
 </ul>
