--- a/src/app/representative/profile/profile.component.html
+++ b/src/app/representative/profile/profile.component.html
@@ -1,8 +1,7 @@
-<div class="card">
-  <div class="card-block">
-    <h4 class="card-title">Nome do município</h4>
-    <h6 class="card-subtitle mb-2 text-muted">Nome do estado - BR</h6>
-    <br>
+    <div class="border">
+    <h4 class="display-4">Nome do município</h4>
+    <h6 class="lead">Nome do estado - BR</h6>
+    <hr class="afx">
     <dl>
       <dt>Email</dt>
       <dd>email@cidade.gov.br</dd>
@@ -12,6 +11,10 @@
       <dd><span class="badge badge-success">Aprovado</span></dd>
       <dt>Status</dt>
       <dd><span class="badge badge-success">Aprovado</span></dd>
-    </dl>    
-  </div>
-</div>
+    </dl>   
+    </div>
+    <hr class="afx">
+    <div>
+      <h4>Serviços disponíveis atualmente</h4>
+      <app-current-city-services-table></app-current-city-services-table>
+    </div> 
